# Equation_solver

./: .gitignore  CMakeLists.txt  constants.c  constants.h  database.h  errors.c  errors.h  list.c  list.h  main.c  my_string.c  my_string.h  render.c  render.h  todo.md
classes/constants/: constants.c  constants.h
classes/errors/: errors.h
classes/list/: list.c  list.h
classes/my_string/: my_string.c  my_string.h
classes/polynom/: polynom.c  polynom.h
classes/render/: render.c  render.h
classes/stack/: stack.c  stack.h
